<resources>
    <string name="app_name">Museum</string>
    <string name="enter_password">Enter your password here!</string>
    <string name="enter_email">Enter your email address here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_password_again">Enter your password again!</string>
    <string name="login_page">Login Page</string>
    <string name="registration_page">Registration Page</string>
    <string name="continue_without_login">Continue Without Login</string>
    <string name="museum">Museum</string>
    <string name="game">Game</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="map">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="searchFragmentTitle">Search</string>
    <string name="mapFragmentTitle">Map</string>
    <string name="exhibitionsFragmentTitle">Browse</string>
    <string name="gameFragmentTitle">Game</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="logout">Log out</string>
    <string name="high_score">High Score</string>
    <string name="send">Send!</string>
    <string name="wrong_answer">Wrong Anwer!</string>
    <string name="correct_answer">Correct Answer!</string>
    <string name="new_game">New Game</string>
    <string name="search_hint">Search for an artwork</string>
    <string name="highscore_your_score">Your Score:</string>
    <string name="you">You</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="good_job">Good job!</string>
    <string name="good_job_location_visited">Good job! You\'ve visited the location!</string>
    <string name="your_answer">Your answer</string>
</resources>
